Ready for github publishing

--- a/_site.yml
+++ b/_site.yml
@@ -1,4 +1,5 @@
 name: "ByronAnalytics"
+output_dir: "."
 navbar:
   title: "Byron Analytics"
   right:
@@ -6,8 +7,6 @@ navbar:
       href: index.html  
     - text: "About"
       href: about.html
-    - text: "Contact"
-      href: contact.html
 output: 
   html_document:
     theme: cosmo
